tests/ui/async-await/await-keyword/2018-edition-error.stderr
error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error.rs:5:13
   |
LL |     pub mod await {
   |             ^^^^^ expected identifier, found keyword
   |
help: escape `await` to use it as an identifier
   |
LL |     pub mod r#await {
   |             ++

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error.rs:6:20
   |
LL |         pub struct await;
   |                    ^^^^^ expected identifier, found keyword
   |
help: escape `await` to use it as an identifier
   |
LL |         pub struct r#await;
   |                    ++

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error.rs:9:22
   |
LL | use self::outer_mod::await::await;
   |                      ^^^^^ expected identifier, found keyword
   |
help: escape `await` to use it as an identifier
   |
LL | use self::outer_mod::r#await::await;
   |                      ++

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error.rs:9:29
   |
LL | use self::outer_mod::await::await;
   |                             ^^^^^ expected identifier, found keyword
   |
help: escape `await` to use it as an identifier
   |
LL | use self::outer_mod::await::r#await;
   |                             ++

error: expected identifier, found keyword `await`
  --> $DIR/2018-edition-error.rs:12:14
   |
LL | macro_rules! await { () => {}; }
   |              ^^^^^ expected identifier, found keyword
   |
help: escape `await` to use it as an identifier
   |
LL | macro_rules! r#await { () => {}; }
   |              ++

error: expected expression, found `)`
  --> $DIR/2018-edition-error.rs:15:12
   |
LL |     await!();
   |            ^ expected expression

error: aborting due to 6 previous errors

